<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>Practicas3D</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>jogamp-remote</id>
            <name>jogamp test mirror</name>
            <url>https://www.jogamp.org/deployment/maven/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>jogamp-java3d-remote</id>
            <name>jogamp java3d test mirror</name>
            <url>https://www.jogamp.org/deployment/maven-java3d/</url>
            <layout>default</layout>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.jogamp.java3d</groupId>
            <artifactId>java3d-core</artifactId>
            <version>1.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.java3d</groupId>
            <artifactId>vecmath</artifactId>
            <version>1.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.java3d</groupId>
            <artifactId>java3d-utils</artifactId>
            <version>1.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all-main</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt-main</artifactId>
            <version>2.5.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <executable>java</executable>

                    <arguments>
                        <argument>--add-exports=java.base/java.lang=ALL-UNNAMED</argument>
                        <argument>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</argument>
                        <argument>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</argument>
                        <argument>--add-opens=java.desktop/javax.swing=ALL-UNNAMED</argument>
                        <argument>--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED</argument>
                        <argument>-Djava.awt.headless=false</argument>
                        <argument>-Dsun.awt.noerasebackground=true</argument>

                        <argument>-classpath</argument>
                        <classpath/>

                        <argument>org.example.Main</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>